--- a/forum/templates/forum/forum_home.html
+++ b/forum/templates/forum/forum_home.html
@@ -1,331 +1,222 @@
 {% extends 'personal/home.html' %}
 {% load crispy_forms_tags %}
-{% block post %}
-<style type="text/css">
-body{
-background:#eee;
-}
-.white-bg {
-    background-color: #ffffff;
-}
-.page-heading {
-    border-top: 0;
-    padding: 0 10px 20px 10px;
-}
 
-.forum-post-container .media {
-  margin: 10px 10px 10px 10px;
-  padding: 20px 10px 20px 10px;
-  border-bottom: 1px solid #f1f1f1;
-}
-.forum-avatar {
-  float: left;
-  margin-right: 20px;
-  text-align: center;
-  width: 110px;
-}
-.forum-avatar .img-circle {
-  height: 48px;
-  width: 48px;
-}
-.author-info {
-  color: #676a6c;
-  font-size: 11px;
-  margin-top: 5px;
-  text-align: center;
-}
-.forum-post-info {
-  padding: 9px 12px 6px 12px;
-  background: #f9f9f9;
-  border: 1px solid #f1f1f1;
-}
-.media-body > .media {
-  background: #f9f9f9;
-  border-radius: 3px;
-  border: 1px solid #f1f1f1;
-}
-.forum-post-container .media-body .photos {
-  margin: 10px 0;
-}
-.forum-photo {
-  max-width: 140px;
-  border-radius: 3px;
-}
-.media-body > .media .forum-avatar {
-  width: 70px;
-  margin-right: 10px;
-}
-.media-body > .media .forum-avatar .img-circle {
-  height: 38px;
-  width: 38px;
-}
-.mid-icon {
-  font-size: 66px;
-}
-.forum-item {
-  margin: 10px 0;
-  padding: 10px 0 20px;
-  border-bottom: 1px solid #f1f1f1;
-}
-.views-number {
-  font-size: 24px;
-  line-height: 18px;
-  font-weight: 400;
-}
-.forum-container,
-.forum-post-container {
-  padding: 30px !important;
-}
-.forum-item small {
-  color: #999;
-}
-.forum-item .forum-sub-title {
-  color: #999;
-  margin-left: 50px;
-}
-.forum-title {
-  margin: 15px 0 15px 0;
-}
-.forum-info {
-  text-align: center;
-}
-.forum-desc {
-  color: #999;
-}
-.forum-icon {
-  float: left;
-  width: 30px;
-  margin-right: 20px;
-  text-align: center;
-}
-a.forum-item-title {
-  color: inherit;
-  display: block;
-  font-size: 18px;
-  font-weight: 600;
-}
-a.forum-item-title:hover {
-  color: inherit;
-}
-.forum-icon .fa {
-  font-size: 30px;
-  margin-top: 8px;
-  color: #9b9b9b;
-}
-.forum-item.active .fa {
-  color: #1ab394;
-}
-.forum-item.active a.forum-item-title {
-  color: #1ab394;
-}
-@media (max-width: 992px) {
-  .forum-info {
-    margin: 15px 0 10px 0;
-    /* Comment this is you want to show forum info in small devices */
-    display: none;
-  }
-  .forum-desc {
-    float: none !important;
-  }
-}
-.ibox {
-  clear: both;
-  margin-bottom: 25px;
-  margin-top: 0;
-  padding: 0;
-}
-.ibox.collapsed .ibox-content {
-  display: none;
-}
-.ibox.collapsed .fa.fa-chevron-up:before {
-  content: "\f078";
-}
-.ibox.collapsed .fa.fa-chevron-down:before {
-  content: "\f077";
-}
-.ibox:after,
-.ibox:before {
-  display: table;
-}
-.ibox-title {
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-  background-color: #ffffff;
-  border-color: #e7eaec;
-  border-image: none;
-  border-style: solid solid none;
-  border-width: 3px 0 0;
-  color: inherit;
-  margin-bottom: 0;
-  padding: 14px 15px 7px;
-  min-height: 48px;
-}
-.ibox-content {
-  background-color: #ffffff;
-  color: inherit;
-  padding: 15px 20px 20px 20px;
-  border-color: #e7eaec;
-  border-image: none;
-  border-style: solid solid none;
-  border-width: 1px 0;
-}
-.ibox-footer {
-  color: inherit;
-  border-top: 1px solid #e7eaec;
-  font-size: 90%;
-  background: #ffffff;
-  padding: 10px 15px;
-}
-
-.message-input {
-    height: 90px !important;
-}
-.form-control, .single-line {
-    background-color: #FFFFFF;
-    background-image: none;
-    border: 1px solid #e5e6e7;
-    border-radius: 1px;
-    color: inherit;
-    display: block;
-    padding: 6px 12px;
-    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
-    width: 100%;
-    font-size: 14px;
-}
-.text-navy {
-    color: #1ab394;
-}
-.mid-icon {
-    font-size: 66px !important;
-}
-.m-b-sm {
-    margin-bottom: 10px;
-}
-</style>
+{% block head %}
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<style type="text/css">
+    .page-heading {
+        border-top: 0;
+        padding: 0 10px 20px 10px;
+    }
+
+    .forum-post-container .media {
+      margin: 10px 10px 10px 10px;
+      padding: 20px 10px 20px 10px;
+      border-bottom: 1px solid #f1f1f1;
+    }
+    .forum-avatar {
+      float: left;
+      margin-right: 20px;
+      text-align: center;
+      width: 110px;
+    }
+    .forum-avatar .img-circle {
+      height: 48px;
+      width: 48px;
+    }
+    .author-info {
+      color: #676a6c;
+      font-size: 11px;
+      margin-top: 5px;
+      text-align: center;
+    }
+    .forum-post-info {
+      padding: 9px 12px 6px 12px;
+      background: #f9f9f9;
+      border: 1px solid #f1f1f1;
+    }
+    .media-body > .media {
+      background: #f9f9f9;
+      border-radius: 3px;
+      border: 1px solid #f1f1f1;
+    }
+    .forum-post-container .media-body .photos {
+      margin: 10px 0;
+    }
+    .forum-photo {
+      max-width: 140px;
+      border-radius: 3px;
+    }
+    .media-body > .media .forum-avatar {
+      width: 70px;
+      margin-right: 10px;
+    }
+    .media-body > .media .forum-avatar .img-circle {
+      height: 38px;
+      width: 38px;
+    }
+    .mid-icon {
+      font-size: 66px;
+    }
+    .forum-item {
+      margin: 10px 0;
+      padding: 10px 0 20px;
+      border-bottom: 1px solid #f1f1f1;
+    }
+    .views-number {
+      font-size: 24px;
+      line-height: 18px;
+      font-weight: 400;
+    }
+    .forum-container,
+    .forum-post-container {
+      padding: 30px !important;
+    }
+    .forum-item small {
+      color: #999;
+    }
+    .forum-item .forum-sub-title {
+      color: #999;
+      margin-left: 50px;
+    }
+    .forum-title {
+      margin: 15px 0 15px 0;
+    }
+    .forum-info {
+      text-align: center;
+    }
+    .forum-desc {
+      color: #999;
+    }
+    .forum-icon {
+      float: left;
+      margin-right: 20px;
+      text-align: center;
+    }
+    a.forum-item-title {
+      color: inherit;
+      display: block;
+      font-size: 18px;
+      font-weight: 600;
+    }
+    a.forum-item-title:hover {
+      color: inherit;
+    }
+    .forum-icon .fa {
+      font-size: 30px;
+      margin-top: 8px;
+      color: #9b9b9b;
+    }
+    .forum-item.active .fa {
+      color: #000;
+    }
+    .forum-item.active a.forum-item-title {
+      color: #000;
+    }
+    @media (max-width: 992px) {
+      .forum-info {
+        margin: 15px 0 10px 0;
+        /* Comment this is you want to show forum info in small devices */
+        display: none;
+      }
+      .forum-desc {
+        float: none !important;
+      }
+    }
+    .ibox {
+      clear: both;
+      margin-bottom: 25px;
+      margin-top: 0;
+      padding: 0;
+    }
+    .ibox.collapsed .ibox-content {
+      display: none;
+    }
+    .ibox.collapsed .fa.fa-chevron-up:before {
+      content: "\f078";
+    }
+    .ibox.collapsed .fa.fa-chevron-down:before {
+      content: "\f077";
+    }
+    .ibox:after,
+    .ibox:before {
+      display: table;
+    }
+    .ibox-title {
+      -moz-border-bottom-colors: none;
+      -moz-border-left-colors: none;
+      -moz-border-right-colors: none;
+      -moz-border-top-colors: none;
+      background-color: #ffffff;
+      border-color: #e7eaec;
+      border-image: none;
+      border-style: solid solid none;
+      border-width: 3px 0 0;
+      color: inherit;
+      margin-bottom: 0;
+      padding: 14px 15px 7px;
+      min-height: 48px;
+    }
+    .ibox-content {
+      background-color: #ffffff;
+      color: inherit;
+      padding: 15px 20px 20px 20px;
+      border-color: #e7eaec;
+      border-image: none;
+      border-style: solid solid none;
+      border-width: 1px 0;
+      border-radius: 10px;
+    }
+    .ibox-footer {
+      color: inherit;
+      border-top: 1px solid #e7eaec;
+      font-size: 90%;
+      background: #ffffff;
+      padding: 10px 15px;
+    }
+
+    .message-input {
+        height: 90px !important;
+    }
+    .form-control, .single-line {
+        background-color: #FFFFFF;
+        background-image: none;
+        border: 1px solid #e5e6e7;
+        border-radius: 1px;
+        color: inherit;
+        display: block;
+        padding: 6px 12px;
+        transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+        width: 100%;
+        font-size: 14px;
+    }
+    .text-navy {
+        color: #3232a8;
+    }
+    .mid-icon {
+        font-size: 66px !important;
+    }
+    .m-b-sm {
+        margin-bottom: 10px;
+    }
+</style>
+{% endblock head %}
+
+{% block post %}
 <div class="container">
-<div class="row">
-    <div class="col-lg-12">
-        <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="wrapper wrapper-content animated fadeInRight">
 
-            <div class="ibox-content m-b-sm border-bottom">
-                <div class="p-xs">
-                    <div class="pull-left m-r-md">
-                        <i class="fa fa-globe text-navy mid-icon"></i>
-                    </div>
-                    <h2>Welcome to our forum</h2>
-                    <span>Feel free to choose topic you're interested in.</span>
+                {% include 'forum/snippets/forum_home_header.html' %}
+
+                <div class="ibox-content forum-container">
+                    {% include 'forum/snippets/forum_home_general_subject.html' %}
+                    {% include 'forum/snippets/forum_home_faculty_subject.html' %}
                 </div>
-            </div>
-
-            <div class="ibox-content forum-container">
-
-                <div class="forum-title">
-                    <div class="pull-right forum-desc">
-                        <samll>Total forum: {{general_subject|length}}</samll>
-                    </div>
-                    <h3>General forums</h3>
-                </div>
-
-                {% for forum in general_subject %}
-                <div class="forum-item active">
-                    <div class="row">
-                        <div class="col-md-9">
-                            <div class="forum-icon">
-                                <i class="fa fa-shield"></i>
-                            </div>
-                            <a href="{% url 'forum:forum-content' forum.0.pk %}" class="forum-item-title">{{forum.0.title}}</a>
-                            <div class="forum-sub-title">{{forum.0.description}}</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="views-number">
-                                {% if forum.2 > 0 %}
-                                    {{forum.2}}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </span>
-                            <div>
-                                <small>Views</small>
-                            </div>
-                        </div>
-                        <!--
-                        <div class="col-md-1 forum-info">
-                            <span class="views-number">
-                                368
-                            </span>
-                            <div>
-                                <small>Topics</small>
-                            </div>
-                        </div>-->
-                        <div class="col-md-2 forum-info"> <!-- md-1 -->
-                            <span class="views-number">
-                                {{forum.1}}
-                            </span>
-                            <div>
-                                <small>Posts</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
-
-
-                <div class="forum-title">
-                    <div class="pull-right forum-desc">
-                        <samll>Total forum: {{faculty_subject|length}}</samll>
-                    </div>
-                    <h3>Faculty forums</h3>
-                </div>
-
-                {% for forum in faculty_subject %}
-                <div class="forum-item active">
-                    <div class="row">
-                        <div class="col-md-9">
-                            <div class="forum-icon">
-                                <i class="fa fa-clock-o"></i>
-                            </div>
-                            <a href="{% url 'forum:forum-content' forum.0.pk %}" class="forum-item-title">{{forum.0.title}}</a>
-                            <div class="forum-sub-title">{{forum.0.description}}</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="views-number">
-                                {% if forum.2 > 0 %}
-                                    {{forum.2}}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </span>
-                            <div>
-                                <small>Views</small>
-                            </div>
-                        </div><!--
-                        <div class="col-md-1 forum-info">
-                            <span class="views-number">
-                                238
-                            </span>
-                            <div>
-                                <small>Topics</small>
-                            </div>
-                        </div>-->
-                        <div class="col-md-2 forum-info"> <!-- md-1 -->
-                            <span class="views-number">
-                                {{forum.1}}
-                            </span>
-                            <div>
-                                <small>Posts</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
-
             </div>
         </div>
     </div>
-</div>
 </div>
 
 {% endblock post %}
