add mptt model for forum reply

--- a/forum/templates/forum/snippets/forum_detail_post.html
+++ b/forum/templates/forum/snippets/forum_detail_post.html
@@ -39,7 +39,7 @@
                 <hr>
                 <div class="mt-3 font-size-sm">
                     {% autoescape off %}
-                    <p>{{post.body}}</p>
+                    <p style="text-align: justify;text-justify: inter-word;">{{post.body}}</p>
                     {% endautoescape %}
                 </div>
             </div>
