--- a/forum/templates/forum/snippets/forum_detail/comments.html
+++ b/forum/templates/forum/snippets/forum_detail/comments.html
@@ -13,25 +13,16 @@
             <summary>
                 <div class="comment-heading">
                     <div class="comment-voting">
-                        <form method="POST" action="{% url 'forum:reply-upvote' post.pk reply.pk %}">
-                          {% csrf_token %}
-                          <input type="hidden" name="next" value="{{ request.path }}">
-                          <button class="btn btn-transparent p-0" type="submit">
-                            <div class="{% if request.user in reply.upvote.all %}up{% else %}inactive{% endif %}">
-                              <i class="fas fa-chevron-circle-up"></i>
+                        <button class="btn btn-transparent p-0" type="submit" id="upvote-reply-{{reply.pk}}" onclick="sentAJAX_upvote_reply({{reply.pk}}, {{post.pk}})">
+                          <div id="upvote-reply-div-{{reply.pk}}" class="{% if request.user in reply.upvote.all %}up{% else %}inactive{% endif %}">
+                            <i class="fas fa-chevron-circle-up"></i>
+                          </div>
+                        </button>
+                        <button class="btn btn-transparent p-0" type="submit" id="downvote-reply-{{reply.pk}}" onclick="sentAJAX_downvote_reply({{reply.pk}}, {{post.pk}})">
+                            <div id="downvote-reply-div-{{reply.pk}}" class="{% if request.user in reply.downvote.all %}down{% else %}inactive{% endif %}">
+                              <i class="fas fa-chevron-circle-down"></i>
                             </div>
-                          </button>
-                        </form>
-                        
-                        <form method="POST" action="{% url 'forum:reply-downvote' post.pk reply.pk %}">
-                          {% csrf_token %}
-                          <input type="hidden" name="next" value="{{ request.path }}">
-                          <button class="btn btn-transparent p-0" type="submit">
-                            <div class="{% if request.user in reply.downvote.all %}down{% else %}inactive{% endif %}">
-                                <i class="fas fa-chevron-circle-down"></i>
-                            </div>
-                          </button>
-                        </form>
+                        </button>
                     </div>
                     <div class="comment-info">
                         <a href="{% url 'account:view' user_id=reply.author.profile.pk %}" class="card-link">
@@ -40,7 +31,7 @@
                         <a href="#" class="comment-author">{{reply.author.username}}</a>
                         <span>replied {{ reply.created|naturaltime }} </span> <small class="text-muted ml-2">({{reply.created}}) {{reply.level}}</small>
                         {% with point=reply.upvote.all.count|sub:reply.downvote.all.count %}
-                        <p class="points {% if point > 0 %}up{% endif %} {% if point < 0 %}down{% endif %}">{{point}} points</p>
+                        <p id="score-{{reply.pk}}" class="points {% if point > 0 %}up{% endif %} {% if point < 0 %}down{% endif %}"><span id="score-reply-{{reply.pk}}">{{point}}</span> points</p>
                         {% endwith %}
                     </div>
                 </div>
